tests/purs/failing/KindApply.purs
-- @shouldFailWith CannotApplyTypeOnType

module Main where

type Fail = Array @Int
